# shipping

shipping-service/: .env.default  Dockerfile  alembic.ini  pyproject.toml
shipping-service/alembic/: env.py
shipping-service/alembic/versions/: 0c87cd21230e_create_shipping_table.py  7a708d5b1cbe_add_created_and_updated_to_shipping_.py  a64ee97e8712_init_alembic.py  a8275911e40a_init_tables.py
shipping-service/app/: main.py
shipping-service/app/database/: session.py
shipping-service/app/database/dbo/: models.py
shipping-service/app/database/repositories/: harbor_repository.py  shipment_repository.py
shipping-service/app/routers/: harbor.py  router_dependencies.py  shipment.py
shipping-service/app/routers/dto/: harbor.py  shipment.py
shipping-service/app/routers/services/: harbor_service.py  shipment_service.py
